--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+.section-center{
+    /* border: 2px solid black; */
+    background-color: white;
+    width: 600px;
+    margin: 50px auto;
+    box-shadow: 3px 3px 15px black;
+    padding: 30px;
+    padding-top: 10px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn-clear{
+    display: block;
+    margin: 10px auto;
+    color: rgb(249 13 13);
+    background-color: transparent;
+    border: 1px solid rgba(255, 0, 0, 0.774);
+    padding: 6px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn-clear:hover{
+    transition: 0.3s ease-out;
+    background-color: rgba(255, 0, 0, 0.774);;
+    color: white;
 }
+.head{
+    text-align: center;
+    font-size: 20px;
+    padding: 6px;
+    margin-bottom: 17px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.btn{
+    color:white;
+    background-color: rgba(10, 118, 180, 0.925);
+    padding:  4px 15px 4px 15px;
+    cursor: pointer;
+    font-weight: bold;
 }
+.btn:hover{
+    background-color: rgb(42, 150, 212);
+    transition: 0.3s ease-out;
+}
+input{
+    padding: 4px;
+    width: 377px;
+    margin-left: 54px;
+    border: 1px solid lightblue;
+    background-color: #e6f4f8;
+}
+.form{
+    /* border: 1px solid rgba(10, 118, 180, 0.925); */
+    margin: 5px auto;
+    width: 550px;
+    padding: 6px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+input:active{
+    border: 1px solid rgba(10, 118, 180, 0.925);
+}
+.alert
+{
+    /* border: 1px solid black; */
+    margin: 10px;
+    text-align: center;
+
+}
+.alert-success{
+    background-color: lightgreen;
+    color: rgb(6, 87, 6);
+    
+}
+.alert-danger{
+    background-color:rgb(241 152 152 / 45%);
+    color: rgb(199, 6, 6);
+    
 }
