--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,56 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
+  background-color: rgb(209, 227, 233);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  text-transform: capitalize;
 }
+@media only screen and (max-width: 600px) {
+  .section-center {
+    /* border: 2px solid black; */
+    background-color: white;
+    width: 90vw;
+    margin: 50px auto;
+    /* box-shadow: 3px 3px 15px black; */
+    /* padding: 30px; */
+    padding-top: 10px;
+}
+.form {
+  /* border: 1px solid rgba(10, 118, 180, 0.925); */
+  margin: 5px auto;
+  /* width: 291px; */
+  padding: 6px;
+}
+input {
+  padding: 4px;
+  width: 100%;
+  margin-left:0px;
+  border: 1px solid lightblue;
+  background-color: #e6f4f8;
+}
+.btn {
+  /* color: white; */
+  /* background-color: rgba(10, 118, 180, 0.925); */
+  /* padding: 4px 15px 4px 15px; */
+  /* cursor: pointer; */
+  margin: 5px auto;
+  display: block;
+  /* font-weight: bold; */
+}
+.text{
+  margin-left: 2px;
+}
+.btn-container
+{
+  margin-right: 0px;
+}
+.btn-clear{
+  font-size: 13px;
+}
+}
+ 
